# gpt-pilot

./: .dockerignore  Dockerfile  Dockerfile.fixed  MANIFEST.in  READMEASWELL.md  check_path.py  clean_install.bat  clean_install.sh  deepseek.py  docker-compose.yml  example-config.json  main.py  nuke_and_rebuild.bat  package-lock.json  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-fixed.txt  requirements-minimal-test.txt  requirements-minimal.txt  requirements.txt  set_pythonpath.bat  setup.bat  setup.py  setup.sh  setup_fixed.bat  setup_fixed.sh  socket_server.py  test_core_imports.py  test_deepseek.py  test_deepseek_full.py  test_deepseek_integration.py  test_deepseek_simple.py  test_imports.py  test_minimal.py
core/: __init__.py
core/agents/: convo.py
core/config/: __init__.py  adapter.py  env_importer.py  ipc.py  magic_words.py  ui.py  virtual.py
core/llm/: __init__.py  base.py  convo.py  deepseek_client.py  openai_client.py  request_log.py
core/log/: __init__.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/project/[id]/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/lib/: socket.ts
frontend/src/lib/api/: client.ts
frontend/src/types/: socket.io-client.d.ts
gpt_pilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/cli/: test_cli.py
tests/config/: test_config.py  testconfig.json
tests/state/: test_state_manager.py
