[project]
name = "gpt-pilot"
version = "0.1.0"
description = "An AI agent that writes code"
authors = [{ name = "gpt-pilot developers", email = "dev@example.com" }]
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.2", 
    "anthropic>=0.25.9",
    "httpx>=0.27.0",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "sqlalchemy[asyncio]>=2.0.32",
    "jinja2>=3.1.4",
    "openai>=1.40.6",
    "groq>=0.6.0",
    "psutil>=5.9.8",
    "huggingface-hub>=0.24.5",
    "tokenizers>=0.20.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0"
]

[build-system]
requires = ["setuptools>=69.0.3", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core"]
package-data = { "core" = ["prompts/**/*", "templates/**/*"] }

[project.scripts]
gpt-pilot = "main:main"